# calibrazione

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  ControlSystemDesignerSession.mat  Makefile  OptionParser.hpp  R.cpp  README.docx  RESUME_FILE.pptx  analyse.py  analyse_data_test.py  analyzer.py  average.py  build_project.sh  calibra  calibrazione  calibrazione.cpp  chessboard.cpp  cmake_install.cmake  controltest.cpp  find_R.mlx  find_tf.mlx  find_tf.py  generatederivative.py  graph_five.py  loggertest  loggertest.cpp  main.cpp  misura20.csv  misure_da_prendere.txt  plot_controller_data.py  plot_dev_std.py  plot_response.py  plot_ritardo_sensore.py  prova.cpp  prova10.000000.csv  prova12.500000.csv  prova15.000000.csv  (+24 more)
control/: position_response  velocity_control  velocity_response  velocity_response_computed  velocity_response_computed_filtered
control2/: velocity_control  velocity_response  velocity_response_filtered
control_10/: velocity_response  velocity_response_filtered
control_10mm/: position_response  velocity_control
control_20/: position_response  velocity_response_computed  velocity_response_computed_filtered
control_20mm/: velocity_control  velocity_response
csvlogger/: CMakeLists.txt  CsvLogger.cpp  CsvLogger.hpp  Makefile  cmake_install.cmake
delay/: position_response  ritardo_istruzione  sensor_response  velocity_control
distance_sensor/: CMakeLists.txt  DistanceSensor.hpp  Makefile  README.md  UltrasonicSensor.cpp  UltrasonicSensor.hpp  cmake_install.cmake
distance_sensor/include/: DistanceSensor.hpp  InfraredSensor.hpp  UltrasonicSensor.hpp  read_sensor.h
distance_sensor/src/: InfraredSensor.cpp  UltrasonicSensor.cpp
input_files/: misure_test.txt  superfici_test.txt
measurements/infrared/: 020mm.csv  030mm.csv  040mm.csv  050mm.csv  060mm.csv  070mm.csv  100mm.csv  110mm.csv
measurements/infrared/a_prova/: 020mm.csv  030mm.csv  040mm.csv  050mm.csv  060mm.csv  070mm.csv  080mm.csv  090mm.csv  100mm.csv  110mm.csv  120mm.csv  130mm.csv  140mm.csv  150mm.csv  160mm.csv  170mm.csv  180mm.csv
measurements/infrared/bloccoalluminio/: 020mm.csv  030mm.csv  040mm.csv  050mm.csv  060mm.csv  070mm.csv  080mm.csv  090mm.csv  100mm.csv  110mm.csv  120mm.csv  130mm.csv  140mm.csv  150mm.csv  160mm.csv  165mm.csv  170mm.csv  180mm.csv
measurements/infrared/bloccoalluminio2/: 00mm.csv  010mm.csv  015mm.csv  020mm.csv  025mm.csv  030mm.csv  035mm.csv  040mm.csv  045mm.csv  050mm.csv  055mm.csv  05mm.csv  060mm.csv  065mm.csv  070mm.csv  075mm.csv  080mm.csv  085mm.csv  090mm.csv  095mm.csv  100mm.csv  105mm.csv  110mm.csv  115mm.csv  120mm.csv  125mm.csv  130mm.csv  135mm.csv  140mm.csv  145mm.csv  150mm.csv  155mm.csv  160mm.csv  165mm.csv  170mm.csv
measurements/infrared/cartaalluminio/: 00mm.csv  010mm.csv  015mm.csv  020mm.csv  025mm.csv  030mm.csv  035mm.csv  040mm.csv  045mm.csv  050mm.csv  055mm.csv  05mm.csv  060mm.csv  065mm.csv  070mm.csv  075mm.csv  080mm.csv  085mm.csv  090mm.csv  095mm.csv  100mm.csv  105mm.csv  110mm.csv  115mm.csv  120mm.csv  125mm.csv  130mm.csv  135mm.csv  140mm.csv  145mm.csv  150mm.csv  155mm.csv  160mm.csv  165mm.csv  170mm.csv  180mm.csv
measurements/infrared/cartanera/: 020mm.csv  030mm.csv  040mm.csv  050mm.csv  060mm.csv  070mm.csv  080mm.csv  090mm.csv  100mm.csv  110mm.csv  120mm.csv  130mm.csv  140mm.csv  150mm.csv  160mm.csv  170mm.csv  180mm.csv
measurements/infrared/cartavelinanera/: 020mm.csv  030mm.csv  040mm.csv  050mm.csv  060mm.csv  070mm.csv  080mm.csv  090mm.csv  100mm.csv  110mm.csv  120mm.csv  130mm.csv  140mm.csv  150mm.csv  160mm.csv  170mm.csv  180mm.csv
measurements/infrared/cartoncinobianco/: 020mm.csv  030mm.csv  040mm.csv  050mm.csv  060mm.csv  070mm.csv  080mm.csv  090mm.csv  100mm.csv  110mm.csv  120mm.csv  130mm.csv  140mm.csv  150mm.csv  160mm.csv  170mm.csv  180mm.csv
measurements/infrared/cartonearancio/: 020mm.csv  030mm.csv  040mm.csv  050mm.csv  060mm.csv  070mm.csv  080mm.csv  090mm.csv  100mm.csv  110mm.csv  120mm.csv  130mm.csv  140mm.csv  150mm.csv  160mm.csv  170mm.csv  180mm.csv  200mm.csv
measurements/infrared/cartoneindustriale/: 00mm.csv  010mm.csv  015mm.csv  020mm.csv  025mm.csv  030mm.csv  035mm.csv  040mm.csv  045mm.csv  050mm.csv  055mm.csv  05mm.csv  060mm.csv  065mm.csv  070mm.csv  075mm.csv  (+20 more)
measurements/ultrasonic/: 130mm.csv
meca500_ethercat_cpp/: CsvLoggerFeedback.cpp  CsvLoggerFeedback.hpp  Robot.cpp  Robot.hpp  test.cpp
misure/: infrared_misura20.csv  misura20.000000.csv  misura38.000000.csv  misura56.000000.csv  misura74.000000.csv  prova10.000000.csv  prova15.000000.csv  prova25.000000.csv  prova30.000000.csv  prova40.000000.csv  prova45.000000.csv  prova50.000000.csv  prova60.000000.csv  prova7.500000.csv  prova70.000000.csv  prova80.000000.csv  prova90.000000.csv  stats.csv  surfacesINFO.txt
misure (old)/: prova10.000000.csv  prova12.500000.csv  prova15.000000.csv  prova20.000000.csv  prova25.000000.csv  prova30.000000.csv  prova35.000000.csv  prova40.000000.csv  prova5.000000.csv  prova50.000000.csv  prova60.000000.csv  prova70.000000.csv  stats.csv
misure/lucida/: infrared_misura110.csv  infrared_misura128.csv  infrared_misura146.csv  infrared_misura164.csv  infrared_misura182.csv  infrared_misura20.csv  infrared_misura200.csv  infrared_misura38.csv  infrared_misura56.csv  infrared_misura74.csv  infrared_misura92.csv
option_parser/: OptionParser.cpp
read_sensor/: CMakeLists.txt  ReadME.md  package.xml
read_sensor/include/: read_sensor.h
read_sensor/launch/: read_sensors.sh
read_sensor/msg/: proximity_sensor_data.msg  proximity_sensor_data_all.msg
read_sensor/script/: reset_bias_gui.py
read_sensor/src/: read_sensor.cpp  read_sensor_as.cpp
regolatore/: find_R.mlx
script_matlab/: ControlSystemDesignerSession.mat  DesignRegolatore.mat  find_R.mlx  find_R_deprecated.mlx  sistema_finale_ciclo_chiuso.slx  sistema_finale_ciclo_chiuso.slx.autosave  sistema_finale_ciclo_chiuso.slx.original  sistema_finale_ciclo_chiuso.slxc  test_tf.mlx
sensor_delay/: ritardo_istruzione.csv
(+2687 files in other folders)
